# EECE5554

./: .gitignore
LAB0/: LAB0_TREE.txt  LAB0_TREE_EXTRA.txt  Northeasternusername.txt  README.md  muvadi.p.txt
LAB0/install/: local_setup.sh  setup.sh
LAB0/install/pubsub/share/pubsub/: package.sh  package.xml
LAB0/log/: latest_build
LAB0/src/pubsub/: listener.py  setup.py
LAB0/src/pubsub/pubsub/: talker.py
LAB1/Data/: occluded_known.txt
LAB1/Data/emulator_stationary/: emulator_stationary_0.db3  metadata.yaml
LAB1/Data/open_sky/: open_sky_0.db3
LAB1/Data/open_sky_gui/: open_sky_gui_0.db3
LAB1/Data/test_real/: occluded_known.txt
LAB1/Data/test_real/occluded/: metadata.yaml
LAB1/Data/test_real/open_sky/: test_real_0.db3
LAB1/analysis/: analyze_gps_lab1.py  gps_serial_log.csv  parse_gps_serial.py
LAB1/bags/gps_run1/: gps_run1_0.db3
LAB1/bags/gps_static/: gps_static_0.db3  metadata.yaml
LAB1/bags/gps_static_10min/: gps_static_10min_0.db3
LAB1/bags/gps_utm_test/: metadata.yaml
LAB1/bags/gps_walk/: gps_walk_0.db3
LAB1/bags/utm_static_v2/: metadata.yaml  utm_static_v2_0.db3
LAB1/src/gps_driver/: CMakeLists.txt.bak.20260131_111033  package.xml  package.xml.bak.20260131_111033  setup.py  setup.py.bak.20260131_111033
LAB1/src/gps_driver/gps_driver/: driver.py
LAB1/src/gps_driver/launch/: gps_launch.py
LAB1/src/gps_interfaces/: CMakeLists.txt  package.xml
LAB1/src/gps_interfaces/msg/: GpsMsg.msg  GpsUtm.msg
LAB1/src/gps_lab1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
LAB1/src/gps_lab1/gps_lab1/: gps_serial_to_utm.py
LAB1/src/gps_lab1/msg/: GpsUtm.msg
