<?xml version="1.0"?>
<package format="3">
  <name>gps_driver</name>
  <version>0.0.0</version>
  <description>GPS driver package for EECE 5554 Lab 1</description>
  <maintainer email="muvadi.p@northeastern.edu">phillip</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>


  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gps_interfaces</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
