<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_lab1</name>
  <version>0.0.0</version>
  <description>Lab 1 GPS serial parsing and UTM publishing</description>
  <maintainer email="muvadi.p@northeastern.edu">phillip</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Message generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

